--- a/index.html
+++ b/index.html
@@ -1,11 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
 
-  <head>
+<body>
+  <header>
+    <h1>KpopMania</h1>
+  </header>
+  <main>
+    <p>Bem-vindo ao site oficial!</p>
+    <!-- Coloca suas imagens e posts aqui -->
+  </main>
+</body>  <head>
     <meta charset="UTF-8">
     <title>Site kpopmafia</title>
     <link rel="stylesheet" href="./style.css">
-
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>KpopMania</title>
+  <link rel="stylesheet" href="style.css">
+</head>
   </head>
     
   <body>
