--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             <button onclick="showSection('messages')">💬 Messages</button>
 
             <button onclick="showSection('profile')">👤 Profile</button>
-
+<button id="meuBotao">Clique aqui</button>
         </nav>
 
     </header>
