--- a/index.html
+++ b/index.html
@@ -1,4 +1,31 @@
 <!DOCTYPE html>
+<html lang="pt-BR">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>KpopMania</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+  <header>
+    <h1>KpopMania</h1>
+  </header>
+
+  <main>
+    <p>Bem-vindo ao site oficial!</p>
+
+    <!-- Botões -->
+    <button id="botao1">Botão 1</button>
+    <button id="botao2">Botão 2</button>
+    <button id="botao3">Botão 3</button>
+
+    <!-- Área para mostrar mensagens -->
+    <div id="mensagem"></div>
+  </main>
+
+  <script src="script.js"></script>
+</body>
+</html><!DOCTYPE html>
 <html lang="en">
 
 <body>
