--- a/index.html
+++ b/index.html
@@ -9,6 +9,46 @@
 <body>
   <header>
     <h1>KpopMania</h1>
+    <p>Seu site oficial de K-Pop com infogramas e conteúdo exclusivo</p>
+  </header>
+
+  <main>
+    <!-- Botões de interatividade -->
+    <div class="botoes-container">
+      <button id="botao1">Botão 1</button>
+      <button id="botao2">Botão 2</button>
+      <button id="botao3">Botão 3</button>
+    </div>
+
+    <!-- Área de mensagens -->
+    <div id="mensagem"></div>
+
+    <!-- Infogramas -->
+    <section class="infogramas">
+      <h2>Infogramas</h2>
+      <img src="infograma1.jpg" alt="Infograma 1" class="infograma">
+      <img src="infograma2.jpg" alt="Infograma 2" class="infograma">
+      <img src="infograma3.jpg" alt="Infograma 3" class="infograma">
+    </section>
+  </main>
+
+  <footer>
+    <p>&copy; 2026 KpopMania. Todos os direitos reservados.</p>
+  </footer>
+
+  <script src="script.js"></script>
+</body>
+</html><!DOCTYPE html>
+<html lang="pt-BR">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>KpopMania</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+  <header>
+    <h1>KpopMania</h1>
   </header>
 
   <main>
