--- a/index.html
+++ b/index.html
@@ -1,4 +1,9 @@
-<!DOCTYPE html>
+<section class="infogramas">
+  <h2>Infogramas</h2>
+  <img src="https://via.placeholder.com/300x150?text=Infograma+1" alt="Infograma 1" class="infograma">
+  <img src="https://via.placeholder.com/300x150?text=Infograma+2" alt="Infograma 2" class="infograma">
+  <img src="https://via.placeholder.com/300x150?text=Infograma+3" alt="Infograma 3" class="infograma">
+</section><!DOCTYPE html>
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8">
