--- a/index.html
+++ b/index.html
@@ -3,6 +3,43 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>KpopMania - Instagram K-Pop/Fanfics</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+  <header>
+    <h1>KpopMania</h1>
+    <p>Instagram K-Pop & Fanfics</p>
+  </header>
+
+  <!-- Menu fixo -->
+  <nav class="menu">
+    <button id="homeBtn">Home</button>
+    <button id="capasBtn">Capas</button>
+    <button id="reelsBtn">Reels</button>
+    <button id="perfilBtn">Perfil</button>
+    <button id="chatBtn">Chat</button>
+    <button id="storiesBtn">Stories</button>
+  </nav>
+
+  <!-- Área de conteúdo tipo feed -->
+  <main>
+    <div id="conteudo">
+      <p>Bem-vindo ao KpopMania! Clique nos botões acima para explorar.</p>
+    </div>
+  </main>
+
+  <footer>
+    <p>&copy; 2026 KpopMania. Todos os direitos reservados.</p>
+  </footer>
+
+  <script src="script.js"></script>
+</body>
+</html><!DOCTYPE html>
+<html lang="pt-BR">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>KpopMania - Instagram de Fanfics</title>
   <link rel="stylesheet" href="style.css">
 </head>
