--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>KpopMania - Instagram K-Pop/Fanfics</title>
+  <title>KpopMafia - Instagram K-Pop/Fanfics</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <header>
-    <h1>KpopMania</h1>
+    <h1>KpopMafia</h1>
     <p>Instagram K-Pop & Fanfics</p>
   </header>
 
@@ -25,12 +25,12 @@
   <!-- Área de conteúdo tipo feed -->
   <main>
     <div id="conteudo">
-      <p>Bem-vindo ao KpopMania! Clique nos botões acima para explorar.</p>
+      <p>Bem-vindo ao KpopMafia! Clique nos botões acima para explorar.</p>
     </div>
   </main>
 
   <footer>
-    <p>&copy; 2026 KpopMania. Todos os direitos reservados.</p>
+    <p>&copy; 2026 KpopMafia. Todos os direitos reservados.</p>
   </footer>
 
   <script src="script.js"></script>
@@ -45,7 +45,7 @@
 </head>
 <body>
   <header>
-    <h1>KpopMania</h1>
+    <h1>KpopMafia</h1>
     <p>Instagram K-Pop & Fanfics</p>
   </header>
 
@@ -62,12 +62,12 @@
   <!-- Área de conteúdo -->
   <main>
     <div id="conteudo">
-      <p>Bem-vindo ao KpopMania! Clique nos botões acima para navegar.</p>
+      <p>Bem-vindo ao KpopMafia! Clique nos botões acima para navegar.</p>
     </div>
   </main>
 
   <footer>
-    <p>&copy; 2026 KpopMania. Todos os direitos reservados.</p>
+    <p>&copy; 2026 KpopMafia. Todos os direitos reservados.</p>
   </footer>
 
   <script src="script.js"></script>
@@ -82,12 +82,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>KpopMania</title>
+  <title>KpopMafia</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <header>
-    <h1>KpopMania</h1>
+    <h1>KpopMafia</h1>
     <p>Seu site oficial de K-Pop com infogramas e conteúdo exclusivo</p>
   </header>
 
@@ -112,7 +112,7 @@
   </main>
 
   <footer>
-    <p>&copy; 2026 KpopMania. Todos os direitos reservados.</p>
+    <p>&copy; 2026 KpopMafia. Todos os direitos reservados.</p>
   </footer>
 
   <script src="script.js"></script>
@@ -122,12 +122,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>KpopMania</title>
+  <title>KpopMafia</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <header>
-    <h1>KpopMania</h1>
+    <h1>KpopMafia</h1>
   </header>
 
   <main>
@@ -162,7 +162,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>KpopMania</title>
+  <title>KpopMafia</title>
   <link rel="stylesheet" href="style.css">
 </head>
   </head>
