--- a/index.html
+++ b/index.html
@@ -3,6 +3,40 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>KpopMafia - Fanfic & Marketplace</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+  <header>
+    <h1>KpopMafia</h1>
+    <p>Fanfic, Sinopses & Marketplace K-Pop</p>
+  </header>
+
+  <!-- Menu -->
+  <nav class="menu">
+    <button id="homeBtn">Home</button>
+    <button id="aiBtn">IA Escrita</button>
+    <button id="marketBtn">Marketplace</button>
+  </nav>
+
+  <!-- Conteúdo -->
+  <main>
+    <div id="conteudo">
+      <p>Bem-vindo ao KpopMafia! Clique nos botões acima para explorar.</p>
+    </div>
+  </main>
+
+  <footer>
+    <p>&copy; 2026 KpopMafia | Comissão futura: 2% por manutenção do site</p>
+  </footer>
+
+  <script src="script.js"></script>
+</body>
+</html><!DOCTYPE html>
+<html lang="pt-BR">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>KpopMafia - Instagram K-Pop/Fanfics</title>
   <link rel="stylesheet" href="style.css">
 </head>
