--- a/index.html
+++ b/index.html
@@ -1,5 +1,38 @@
 <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="pt-BR">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>KpopMafia - Fanfic & Marketplace</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+  <header>
+    <h1>KpopMafia</h1>
+    <p>Fanfic, Sinopses & Marketplace K-Pop</p>
+  </header>
+
+  <nav class="menu">
+    <button id="homeBtn">Home</button>
+    <button id="aiBtn">IA Escrita</button>
+    <button id="marketBtn">Marketplace</button>
+  </nav>
+
+  <main>
+    <div id="conteudo">
+      <p>Bem-vindo ao KpopMafia! Clique nos botões acima para explorar.</p>
+    </div>
+  </main>
+
+  <footer>
+    <p>&copy; 2026 KpopMafia | Comissão futura: 2% por manutenção do site</p>
+  </footer>
+
+  <script src="script.js"></script>
+  <script src="denuncia.js"></script>
+</body>
+</html><html lang="pt-BR">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
