--- a/index.html
+++ b/index.html
@@ -1,7 +1,11 @@
 <!DOCTYPE html>
 <!DOCTYPE html>
 <html lang="pt-BR">
-<head>
+<head><div id="simbolosGrupos">
+  <img src="imagens/simbolos/bts.png" alt="BTS" class="logoGrupo">
+  <img src="imagens/simbolos/exo.png" alt="EXO" class="logoGrupo">
+  <img src="imagens/simbolos/straykids.png" alt="Stray Kids" class="logoGrupo">
+</div>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>KpopMafia - Fanfic & Marketplace</title>
