--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<img src="imagens/simbolos/aespa.png" alt="Aespa" class="logoGrupo"><!DOCTYPE html>
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head><div id="simbolosGrupos">
