--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
-a<img src="imagens/simbolos/aespa.png" alt="Aespa" class="logoGrupo">https://share.google/vGl7BIIhxJw7d8Xgi<!DOCTYPE html>
+a<img src="imagens/simbolos/aespa.png" alt="Aespa" class="logoGrupo"<!DOCTYPE html>
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head><div id="simbolosGrupos">
-  <img src="imagens/simbolos/bts.png" alt="BTS" class="logoGrupo">https://share.google/9j1gmHuHgzFH6asND
-  <img src="imagens/simbolos/exo.png" alt="EXO" class="logoGrupo">https://share.google/gKNTpSU1ku0TKO4HM
-  <img src="imagens/simbolos/straykids.png" alt="Stray Kids" class="logoGrupo">https://share.google/G3MUrYPbFigRuwmhP
+  <img src="imagens/simbolos/bts.png" alt="BTS" class="logoGrupo"
+  <img src="imagens/simbolos/exo.png" alt="EXO" class="logoGrupo"
+  <img src="imagens/simbolos/straykids.png" alt="Stray Kids" class="logoGrupo"
 </div>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
